# GoldPy

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  setup.cfg  setup.py  vcpkg.json
.github/workflows/: test.yml
